made it compatible with safari

--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ a:hover{background-color: var(--color); color: var(--back); text-decoration-colo
     body{display: block}
     header{height:auto; border-right: none; border-bottom: solid 1px var(--color);
         background-color: color-mix(in srgb, var(--back) var(--backtrans), transparent); text-align: left;
-        max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px; backdrop-filter: blur(8px);}
+        max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px;
+        -webkit-backdrop-filter: blur(8px); backdrop-filter: blur(8px);}
     main{max-width: 40rem}
     nav{display:block; margin: 16px 0}
     nav a{display: inline}}
