--- a/basement/fonts/style.css
+++ b/basement/fonts/style.css
@@ -18,8 +18,8 @@ details{border-color: grey}
 details:hover, details[open]{border-color: var(--color)}
 details[open]> ::selection{background-color: var(--color); color: var(--back);}
 
-.subcategory{border: none; border-bottom: solid 1px var(--color);margin: 0 0 0 18px;
-width: 100%; padding: 16px 0 18px}
+.subcategory{border: none; border-bottom: solid 1px var(--color);margin: 0 18px;
+width: auto; padding: 16px 0 18px}
 .subcategory > summary{list-style-position: outside; font-size: 1.5rem;
     text-decoration: underline 2px var(--color)}
 .subcategory > summary h2{transition: all .5s cubic-bezier(0,1,0,1)}
@@ -29,9 +29,17 @@ width: 100%; padding: 16px 0 18px}
 .subcategory[open] > summary h2{color: var(--color);}
 details[open] > summary, summary{list-style-type: revert;}
 .subcategory a{color: white}
+.font_grid{margin-top: 16px}
 
-.font{border: dotted 1px var(--color); padding: 12px 12px; 
-    border-radius: 12px; margin: 16px 0; width: fit-content}
+@media (min-width: 1000px) {
+    main{max-width: unset;}
+    .font_grid{width: auto; column-count: 2}
+    .font_grid > *{break-inside: avoid; max-width: 526px}
+    .subcategory > p{max-width: 40rem}
+}
+
+.font{border: dotted 1px var(--color); padding: 12px; 
+    border-radius: 12px; margin: 0 0 16px; width: fit-content}
 .font img{width: 100%}
 
 details a:hover{background-color: var(--back); color: var(--color)}
